# aws-practice

./: .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  pyproject.toml
migrations/: env.py
src/: __main__.py
src/application/common/: exceptions.py
src/infrastructure/db/: __init__.py  config.py  database.py
src/infrastructure/db/models/: base.py
src/infrastructure/di/: container.py
src/presentation/api/: config.py  main.py
src/presentation/api/controllers/rest/: __init__.py
src/presentation/api/controllers/rest/common/: responses.py
src/presentation/api/controllers/rest/v1/healthcheck/: router.py
src/presentation/api/middlewares/: __init__.py  exception_middleware.py  main.py  process_time_middleware.py
