[project]
name = "aws-practice"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "dishka (>=1.6.0,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ['E', 'F', 'W', 'B', 'A', 'PLC', 'PLE', 'PLW', 'I', 'RUF', 'FIX', 'PL']
ignore = [
    "E712",
    "ANN204",
    "PLR0913",
    "A001",
    "A002",
    "B904",
    "UP007",
    "UP006",
    "UP035",
    "ANN201",
    "RUF010",
    "RUF012",
    "PLR0911",
    "B013",
    "B024",
    "PLR1714",
    "PLR0912",
    "B007",
    "PLR0915",
    "FIX002",
    "PLR1704"
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
combine-as-imports = false
relative-imports-order = "closest-to-furthest"
length-sort = false
case-sensitive = true
order-by-type = false
